// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton component should be able to change the default styles 1`] = `
<View
  pointerEvents="box-none"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#B87015",
        "borderRadius": 50,
        "height": 50,
        "justifyContent": "center",
        "width": 50,
      },
      Object {
        "margin": 30,
      },
    ]
  }
>
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth={4}
      focusable={false}
      height="100%"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": -3,
            "position": "absolute",
            "top": 0,
          },
          Object {
            "flex": 0,
            "height": "100%",
            "width": 4,
          },
        ]
      }
      width={4}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                -1632211950,
                1,
                11955218,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="left"
            x1="1"
            x2="0"
            y1="0"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "left",
            ]
          }
          height="100%"
          propList={
            Array [
              "fill",
            ]
          }
          width={3}
          x={0}
          y={-0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth={4}
      focusable={false}
      height="100%"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": "100%",
            "position": "absolute",
            "top": 0,
          },
          Object {
            "flex": 0,
            "height": "100%",
            "width": 4,
          },
        ]
      }
      width={4}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                -1632211950,
                1,
                11955218,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="right"
            x1="0"
            x2="1"
            y1="0"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "right",
            ]
          }
          height="100%"
          propList={
            Array [
              "fill",
            ]
          }
          width={3}
          x={0}
          y={-0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={4}
      bbWidth="100%"
      focusable={false}
      height={4}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": 0,
            "position": "absolute",
            "top": "100%",
          },
          Object {
            "flex": 0,
            "height": 4,
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                -1632211950,
                1,
                11955218,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="bottom"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "bottom",
            ]
          }
          height={3}
          propList={
            Array [
              "fill",
            ]
          }
          width="100%"
          x={-0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={4}
      bbWidth="100%"
      focusable={false}
      height={4}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": 0,
            "position": "absolute",
            "top": -3,
          },
          Object {
            "flex": 0,
            "height": 4,
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                -1632211950,
                1,
                11955218,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="top"
            x1="0"
            x2="0"
            y1="1"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "top",
            ]
          }
          height={3}
          propList={
            Array [
              "fill",
            ]
          }
          width="100%"
          x={-0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={4}
      bbWidth={4}
      focusable={false}
      height={4}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": -3,
            "position": "absolute",
            "top": -3,
          },
          Object {
            "flex": 0,
            "height": 4,
            "width": 4,
          },
        ]
      }
      width={4}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={3}
            cy={3}
            fx={3}
            fy={3}
            gradient={
              Array [
                0,
                -1632211950,
                1,
                11955218,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="topLeft"
            rx={3}
            ry={3}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M0,3 a3,3 0 0 1 3 -3 v3 a0,0 0 0 0 0,0 h-3 Z"
          fill={
            Array [
              1,
              "topLeft",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={4}
      bbWidth={4}
      focusable={false}
      height={4}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": "100%",
            "position": "absolute",
            "top": -3,
            "transform": Array [
              Object {
                "translateX": -0,
              },
            ],
          },
          Object {
            "flex": 0,
            "height": 4,
            "width": 4,
          },
        ]
      }
      width={4}
    >
      <RNSVGGroup
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={0}
            cy={3}
            fx={0}
            fy={3}
            gradient={
              Array [
                0,
                -1632211950,
                1,
                11955218,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="topRight"
            rx={3}
            ry={3}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M0,0 a3,3 0 0 1 3,3 h-3 a0,0 0 0 0 0,0 v-3 Z"
          fill={
            Array [
              1,
              "topRight",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={4}
      bbWidth={4}
      focusable={false}
      height={4}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": -3,
            "position": "absolute",
            "top": "100%",
            "transform": Array [
              Object {
                "translateY": -0,
              },
            ],
          },
          Object {
            "flex": 0,
            "height": 4,
            "width": 4,
          },
        ]
      }
      width={4}
    >
      <RNSVGGroup
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={3}
            cy={0}
            fx={3}
            fy={0}
            gradient={
              Array [
                0,
                -1632211950,
                1,
                11955218,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="bottomLeft"
            rx={3}
            ry={3}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M3,3 a3,3 0 0 1 -3,-3 h3 a0,0 0 0 0 0,0 v3 Z"
          fill={
            Array [
              1,
              "bottomLeft",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={4}
      bbWidth={4}
      focusable={false}
      height={4}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": "100%",
            "position": "absolute",
            "top": "100%",
            "transform": Array [
              Object {
                "translateX": -0,
              },
              Object {
                "translateY": -0,
              },
            ],
          },
          Object {
            "flex": 0,
            "height": 4,
            "width": 4,
          },
        ]
      }
      width={4}
    >
      <RNSVGGroup
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={0}
            cy={0}
            fx={0}
            fy={0}
            gradient={
              Array [
                0,
                -1632211950,
                1,
                11955218,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="bottomRight"
            rx={3}
            ry={3}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M3,0 a3,3 0 0 1 -3,3 v-3 a0,0 0 0 0 0,0 h3 Z"
          fill={
            Array [
              1,
              "bottomRight",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "alignSelf": "flex-start",
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={false}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "width": "40%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`IconButton component should render correctly 1`] = `
<View
  pointerEvents="box-none"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#B87015",
        "borderRadius": 50,
        "height": 50,
        "justifyContent": "center",
        "width": 50,
      },
      undefined,
    ]
  }
>
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth={4}
      focusable={false}
      height="100%"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": -3,
            "position": "absolute",
            "top": 0,
          },
          Object {
            "flex": 0,
            "height": "100%",
            "width": 4,
          },
        ]
      }
      width={4}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                -1632211950,
                1,
                11955218,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="left"
            x1="1"
            x2="0"
            y1="0"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "left",
            ]
          }
          height="100%"
          propList={
            Array [
              "fill",
            ]
          }
          width={3}
          x={0}
          y={-0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth={4}
      focusable={false}
      height="100%"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": "100%",
            "position": "absolute",
            "top": 0,
          },
          Object {
            "flex": 0,
            "height": "100%",
            "width": 4,
          },
        ]
      }
      width={4}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                -1632211950,
                1,
                11955218,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="right"
            x1="0"
            x2="1"
            y1="0"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "right",
            ]
          }
          height="100%"
          propList={
            Array [
              "fill",
            ]
          }
          width={3}
          x={0}
          y={-0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={4}
      bbWidth="100%"
      focusable={false}
      height={4}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": 0,
            "position": "absolute",
            "top": "100%",
          },
          Object {
            "flex": 0,
            "height": 4,
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                -1632211950,
                1,
                11955218,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="bottom"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "bottom",
            ]
          }
          height={3}
          propList={
            Array [
              "fill",
            ]
          }
          width="100%"
          x={-0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={4}
      bbWidth="100%"
      focusable={false}
      height={4}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": 0,
            "position": "absolute",
            "top": -3,
          },
          Object {
            "flex": 0,
            "height": 4,
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                -1632211950,
                1,
                11955218,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="top"
            x1="0"
            x2="0"
            y1="1"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "top",
            ]
          }
          height={3}
          propList={
            Array [
              "fill",
            ]
          }
          width="100%"
          x={-0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={4}
      bbWidth={4}
      focusable={false}
      height={4}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": -3,
            "position": "absolute",
            "top": -3,
          },
          Object {
            "flex": 0,
            "height": 4,
            "width": 4,
          },
        ]
      }
      width={4}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={3}
            cy={3}
            fx={3}
            fy={3}
            gradient={
              Array [
                0,
                -1632211950,
                1,
                11955218,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="topLeft"
            rx={3}
            ry={3}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M0,3 a3,3 0 0 1 3 -3 v3 a0,0 0 0 0 0,0 h-3 Z"
          fill={
            Array [
              1,
              "topLeft",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={4}
      bbWidth={4}
      focusable={false}
      height={4}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": "100%",
            "position": "absolute",
            "top": -3,
            "transform": Array [
              Object {
                "translateX": -0,
              },
            ],
          },
          Object {
            "flex": 0,
            "height": 4,
            "width": 4,
          },
        ]
      }
      width={4}
    >
      <RNSVGGroup
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={0}
            cy={3}
            fx={0}
            fy={3}
            gradient={
              Array [
                0,
                -1632211950,
                1,
                11955218,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="topRight"
            rx={3}
            ry={3}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M0,0 a3,3 0 0 1 3,3 h-3 a0,0 0 0 0 0,0 v-3 Z"
          fill={
            Array [
              1,
              "topRight",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={4}
      bbWidth={4}
      focusable={false}
      height={4}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": -3,
            "position": "absolute",
            "top": "100%",
            "transform": Array [
              Object {
                "translateY": -0,
              },
            ],
          },
          Object {
            "flex": 0,
            "height": 4,
            "width": 4,
          },
        ]
      }
      width={4}
    >
      <RNSVGGroup
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={3}
            cy={0}
            fx={3}
            fy={0}
            gradient={
              Array [
                0,
                -1632211950,
                1,
                11955218,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="bottomLeft"
            rx={3}
            ry={3}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M3,3 a3,3 0 0 1 -3,-3 h3 a0,0 0 0 0 0,0 v3 Z"
          fill={
            Array [
              1,
              "bottomLeft",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={4}
      bbWidth={4}
      focusable={false}
      height={4}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": "100%",
            "position": "absolute",
            "top": "100%",
            "transform": Array [
              Object {
                "translateX": -0,
              },
              Object {
                "translateY": -0,
              },
            ],
          },
          Object {
            "flex": 0,
            "height": 4,
            "width": 4,
          },
        ]
      }
      width={4}
    >
      <RNSVGGroup
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={0}
            cy={0}
            fx={0}
            fy={0}
            gradient={
              Array [
                0,
                -1632211950,
                1,
                11955218,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="bottomRight"
            rx={3}
            ry={3}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M3,0 a3,3 0 0 1 -3,3 v-3 a0,0 0 0 0 0,0 h3 Z"
          fill={
            Array [
              1,
              "bottomRight",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "alignSelf": "flex-start",
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={false}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "width": "40%",
          }
        }
      />
    </View>
  </View>
</View>
`;
